feat: Добавил сущности, подключение к бд.
Новые сущности: Card, User, Role; добавил ddl и dml скрипты; docker-compose.yml теперь поднимает контейнер с postgres:17.4 образом.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
-# 
-# docker-compose.yml — определяет сервисы для разработки и тестирования.
+services:
+  postgres:
+    container_name: bankPostgresDB
+    image: postgres:17.4
+    restart: always
+    environment:
+      POSTGRES_DB: bankDB
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: pass
+    volumes:
+      - postgres:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
-Что нужно сделать:
-  - Настроить сервисы для:
-      - PostgreSQL (или MySQL) с начальной базой.
-      - Приложения Spring Boot (если нужно).
-  - Открыть нужные порты (например, 5432, 8080).
-  - Настроить volume для хранения данных БД.
+volumes:
+  postgres:
