--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
-  app:
-    build: .
-    ports:
-      - "8081:8081"
-    networks:
-      - my-network
+#  app:
+#    build: .
+#    ports:
+#      - "8081:8081"
+#    networks:
+#      - my-network
 
   postgres:
     container_name: bankPostgresDB
@@ -18,6 +18,19 @@ services:
       - postgres:/var/lib/postgresql/data
     ports:
       - "5434:5432"
+    networks:
+      - my-network
+
+  keycloak:
+    container_name: keycloak
+    image: quay.io/keycloak/keycloak:26.4.2
+    environment:
+      KC_BOOTSTRAP_ADMIN_USERNAME: ${KC_BOOTSTRAP_ADMIN_USERNAME}
+      KC_BOOTSTRAP_ADMIN_PASSWORD: ${KC_BOOTSTRAP_ADMIN_PASSWORD}
+    ports:
+      - "9090:8080"
+    command:
+      - "start-dev"
     networks:
       - my-network
 
